Add update function configuration method

--- a/src/config.json
+++ b/src/config.json
@@ -5,7 +5,8 @@
     "execProgram": "node",
     "exposeRoute": false,
     "imgUrl": "logo.png",
-    "version": "1.0.0",
+    "description": "Integration with AWS Lambda",
+    "version": "1.0.1",
     "settings" : [
         {
             "name": "AWS_ACCESS_KEY_ID",
@@ -68,6 +69,22 @@
                     "name": "runtime",
                     "viewName": "Runtime",
                     "type": "string"
+                }
+            ]
+        },
+        {
+            "name":"UPDATE_FUNCTION_CONFIGURATION",
+            "viewName":"Update function configuration",
+            "params":[
+                {
+                    "name":"CONFIG",
+                    "viewName":"Configuration as JSON",
+                    "type":"string"
+                },
+                {
+                    "name":"REGION",
+                    "viewName":"Region",
+                    "type":"string"
                 }
             ]
         }
